--- a/app/jade/layouts/_main.jade
+++ b/app/jade/layouts/_main.jade
@@ -2,7 +2,7 @@
 html(lang="en")
 head
 	meta(charset="UTF-8")
-	title Кредитный калькулятор
+	title Кредитный калькулятор 2
 	link(rel="stylesheet", href="css/main.css")
 body
 	.head
