--- a/app/jade/layouts/_main.jade
+++ b/app/jade/layouts/_main.jade
@@ -7,8 +7,8 @@ head
 	meta(name="keywords" content="кредитный калькулятор, калькулятор кредита, кредит, калькулятор, сбербанк")
 	meta(name="description" content="Кредитный калькулятор, калькулятор кредита онлайн для расчета ежемесячного платежа по кредиту, с возможностью выставить процентную ставку")
 	link(rel="icon" href="favicon.ico" type="image/x-icon")
-	link(rel="stylesheet", href="css/main.css")
-	link(rel="stylesheet", href="css/media.css")
+	link(rel="stylesheet", href="css/main.css?v2")
+	link(rel="stylesheet", href="css/media.css?v2")
 body
 	.head
 		.container
@@ -51,5 +51,5 @@ body
 	script(src="https://code.jquery.com/jquery-3.4.1.min.js")
 	script(src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0")
 	script(src="js/mask.js")
-	script(src="js/main.js")
+	script(src="js/main.js?v2")
 	
