--- a/app/jade/layouts/_main.jade
+++ b/app/jade/layouts/_main.jade
@@ -3,7 +3,7 @@ html(lang="ru")
 head
 	meta(charset="UTF-8")
 	meta(name="viewport" content="width=device-width")
-	title Кредитный калькулятор 2
+	title Кредитный калькулятор
 	meta(name="keywords" content="кредитный калькулятор, калькулятор кредита, кредит, калькулятор, сбербанк")
 	meta(name="description" content="Кредитный калькулятор, калькулятор кредита онлайн для расчета ежемесячного платежа по кредиту, с возможностью выставить процентную ставку")
 	link(rel="icon" href="favicon.ico" type="image/x-icon")
