--- a/app/jade/layouts/_main.jade
+++ b/app/jade/layouts/_main.jade
@@ -19,7 +19,7 @@ body
 		.container
 			.calc__content
 				h1.calc__title Кредитный калькулятор
-				p.calc__p Кредитный калькулятор для онлайн расчета ежемесячного платежа например в Сбербанке, ВТБ и других банков. Так-же сможете расчитать потребительский кредит. Аналогичным способом работает кредитный калькулятор сбербанка. 
+				p.calc__p Кредитный калькулятор для онлайн расчета ежемесячного платежа. Кредитный калькулятор подойдет вам если вы хотите расчитать потребительский кредит.
 				.calc__form
 					.calc__input
 						input(name="summ" type="text" placeholder="Сумма кредита")
